--- a/src/partials/example.html
+++ b/src/partials/example.html
@@ -1,37 +1,33 @@
-<article class="example" id="uk">
-  <h1>HTML-partials</h1>
+<form class=" search-form ">
+      <div >
+        <label for="searchQuery"></label>
+        <input
+          type="text"
+          
+          name="query"
+          id="searchQuery"
+          placeholder="Search images..."
+          autocomplete="off"
+        />
+      </div>
+      <button type="submit" class="btn btn-primary mb-2">Search</button>
+    </form>
 
-  <!--
-    ❗️❗️❗️ The path to images from the HTML partial
-    is the same as from the index.html file
-  -->
-  <img src="images/logo.png" alt="" width="320" />
+    
+<div class="gallery">
+      <!-- Картинки -->
+    </div>
 
-  <p>
-    The
-    <a
-      href="https://github.com/posthtml/posthtml-include"
-      target="_blank"
-      rel="noopener noreferrer"
+    <button
+      type="button"
+      class="load-more"
+      data-action="load-more"
     >
-      posthtml-include
-    </a>
-    plugin allows you to add code from other HTML files (fragments) to HTML page
-    files. Fragments are stored in the <code>src/partials</code> folder. The
-    addition occurs when compiling page files, such as <code>index.html</code>.
-  </p>
+      <span
+        class="is-hidden"
+        role="status"
+        aria-hidden="true"
+      ></span>
 
-  <p>
-    This <code>example.html</code> file is an example of such a snippet, with
-    the markup of a certain part of the main page. This is very convenient for
-    team development on student projects, when several people write in one HTML
-    file at once.
-  </p>
-
-  <p>
-    The syntax for adding a fragment to the main file is:
-    <code> &lt;include src="./partials/filename.html"&gt;&lt;/include&gt;</code>
-  </p>
-
-  <div class="background"></div>
-</article>
+      <span >Load more</span>
+    </button>
